# Cursor-Governance

./: .env.example  .gitattributes  .gitignore  .harvest_executor_state.json  .pre-commit-config.yaml  AGENTS.md  CANONICAL_LAW.md  CHANGELOG.md  CODEOWNERS  Governance_Dashboard.md  LICENSE  Makefile  ORG_INVARIANTS.yaml  README.md  TODO.md  WARP.md  config.json  end-session-v2.yaml  end-session.yaml  env.variables.n8n.ssot.csv  gov_dashboard.sh  governance-health-report.json  governance_enforcer.sh  meta.md  meta_index.md  mode_switcher.py  pyproject.toml  setup-new-workspace-compact.yaml  setup-new-workspace.py  setup-new-workspace.yaml  snippets.json  start-session.yaml
.github/: copilot-instructions.md
C_GOV_FILES/: CRITICAL_FIX_NOTES.md  INSTALLATION.md  LEARNING_SYSTEM_QUICK_REFERENCE.md  LEARNING_SYSTEM_STATUS.md  REASONING_STACK.yaml  SETUP_QUICK_START.md  api-key-verification.md  calibration_dashboard.py  command_execution_risk.md  constellation-linter.md  cursor-native-reasoning.md  escalation-router.py  escalation_need.md  file_compliance_risk.md  gmp-todo.schema.yaml  governance-dashboard.html  governance-metrics.db  governance-monitor.py  governance-test-suite.py  governance-validator.py  hash-verifier.py  integrity-audit.md  meta-learning-log.md  monitoring-layer.md  operational-oversight.md  orchestrator.md  pipeline-orchestration.md  pre-build-question-framework.md  production-quality-standards.md  python-header-template.py  reasoning-metrics.md  reasoning-snapshot-generator.py  session-startup-protocol.md  setup-new-workspace.md  setup-new-workspace.py  system_capabilities.md  workflow-governance.md  workspace-doctor.md
WIP/: 0072-diagnose-before-fix.md
WIP/Graphiti - Cirsor Governance/L9-Graphite-Memory 4/: .gitignore  AGENTS.md  ARCHITECTURE.md  EXTRACTION_MANIFEST.md  README.md  ROADMAP.md  pyproject.toml
WIP/Graphiti - Cirsor Governance/L9-Graphite-Memory 4/.github/workflows/: ci.yml  publish.yml
WIP/Graphiti - Cirsor Governance/L9-Graphite-Memory 4/_archived/: GATES-002-ACTIVATION-vps-legacy.md  MACHINE-ENV-POLICY-vps-legacy.md  ensure_graphiti_tunnel.sh  graphiti.env.defaults
WIP/Graphiti - Cirsor Governance/L9-Graphite-Memory 4/config/: mcp.json.example
WIP/Graphiti - Cirsor Governance/L9-Graphite-Memory 4/config/memory-bank-template/: progress.md  tasks.md
WIP/Graphiti - Cirsor Governance/L9-Graphite-Memory 4/docs/: CURSOR-GRAPHITI-INSTANTIATION-BRIEF.md  DEPLOY.md  GATES-ACTIVATION.md  GMP_LOCKED_PLAN.md  MEMORY_BANK_POLICY.md  RECURSIVE_ALIGNMENT_AUDIT.md  REUSE_MATRIX.md  custom-ontology.md  prune_report_20260607.json
WIP/Graphiti - Cirsor Governance/L9-Graphite-Memory 4/docs/adr/: ADR-001-infisical-secrets-architecture.md  ADR-002-zep-cloud-transport.md
WIP/Graphiti - Cirsor Governance/L9-Graphite-Memory 4/docs/skill/: SKILL.md
WIP/Graphiti - Cirsor Governance/L9-Graphite-Memory 4/hooks/: graphiti-gate-shell.sh  graphiti-gate-subagent.sh  graphiti-prefetch.sh  graphiti-reset-generation.sh  graphiti_common.sh
WIP/Graphiti - Cirsor Governance/L9-Graphite-Memory 4/intelligence/context-memory/: CRITICAL_FIX_NOTES.md  README.md  context-extractor.py
WIP/Graphiti - Cirsor Governance/L9-Graphite-Memory 4/rules/: 97-graph-engine-architecture.mdc  97-graph-layer-boundary.mdc
WIP/Graphiti - Cirsor Governance/L9-Graphite-Memory 4/scripts/: activate_gate.sh  install.sh  preflight.sh  write_claude_config.py  write_cursor_config.py
WIP/Graphiti - Cirsor Governance/L9-Graphite-Memory 4/src/l9_graphite_memory/: __init__.py  circuit_breaker.py  graphiti_memory_client.py  group_resolver.py  prune.py  secrets.py  server.py  transport.py  zep_transport.py
WIP/Graphiti - Cirsor Governance/L9-Graphite-Memory 4/tests/: test_secrets.py  test_transport.py
commands/: .harvest_executor_state.json  README.md  analyze.md  analyze_evaluate.md  audit-component.md  ci-policy.md  ci.md  clean_compress.md  commands-index.md  confirm-wiring.md  consolidate.md  dag-authoring.md  end-session.md  evaluate.md  extract-chat.md  extract-from-chat.md  extract_align.md  forge.md  gap-analysis-new.md  gap-analysis.md  gmp.md  governance-backup.md  governance.md  harvest copy.md  harvest.md  index.md  inspect.md  lcto.md  lint-fix.md  mem.md  migrate.md  pipeline_kickstart.md  pipeline_midstream.md  plan.md  pr.md  probe.md  readme-dag.md  reasoning.md  refactor-sweep.md  refactor.md  (+10 more)
commands/dora-commands/do-templates/: Dockerfile  README.md  metrics.yaml  pyproject.toml  test_example.py
commands/dora-commands/do-templates/src/: __init__.py  main.py
environment/: env-manager.py  env_loader.py
execution-governance/: README.md
integrity/: hash-verifier.py  manifest-lock.json  system-check.sh
intelligence/: PRE_BUILD_QUESTIONS.md  adaptive-reasoning.md  improvement-loop.md  intelligence-manifest.json  meta-audit.md  pre-build-question-framework.md  system-reflection.md
key components/: 01_pattern-detector.md  03_error-corrector.md  04_deployment-orchestrator.md  05_workflow-explainer.md  06_refactor-assistant.md  06_security-validator.md  07_session-rebuilder.md  09_monitor-agent.md  10_folder-reorganizer.md
learning/: credentials-policy.md  n8n-ai-agent-patterns.md
n8n-start-up-kit/: 01_README.md  02_WORKFLOW_CREATION.md  03_CONTEXT7_REFERENCE.md  04_VALIDATION_PROTOCOL.md  05_SYSTEM_ARCHITECTURE.md  06_QUICK_START.md  n8n_api_helper.py
ops/: LEARNING_SYSTEM_QUICK_REFERENCE.md  LEARNING_SYSTEM_STATUS.md  anomaly-response.md  feedback_loop_config.yaml  governance-dashboard.md  memory-aggregator.md
pipeline/: conversion-validation.md  pipeline-orchestration.md  pipeline_precommit.md  pipeline_validate.md
profiles/: advanced-features.md  dev_mode.md  operational-health.md  orchestrator.md  reasoning.md  reasoning_docs.md  reasoning_l9.md  reasoning_n8n.md  reasoning_technical_operations.md  security-access.md  session-startup-protocol.md  versioning.md  workflow-governance.md  ynp_mode.md
prompts/: GMP Rules Hardening — Execute.md  Recursive Alignment — Rules Batch.md  Recursive Alignment — Skills Batch.md  Recursive Improvement — Rules Batch.md  (+4 more)
(+1206 files in other folders)
