[project]
name = "cursor-governance"
version = "2.0.0"
description = "L9 Governance — rules, skills, commands, and activation automation for Quantum-L9 coding workspaces"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Igor Beylin" }]

# Derived from actual imports in ops/graphiti/*.py and workflows/dags/*.py — not
# aspirational. Re-derive with `grep -rhoE "^(import|from) [a-zA-Z0-9_]+"` before
# adding entries here; do not add packages "for later."
dependencies = [
    "pydantic>=2.0,<3",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
# force-exclude: `exclude` alone only affects directory *discovery* (e.g. `ruff
# check .`). pre-commit invokes ruff with explicit filenames, which bypasses
# plain `exclude` — force-exclude makes the patterns apply to explicitly-passed
# paths too, so _archived reference dirs stay untouched either way.
force-exclude = true
exclude = [
    "**/_archived",
    "**/_archive",
    "**/archive",
    "**/archived",
    "current_work/harvested",
    "C_GOV_FILES",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
