[project]
name = "cursor-governance"
version = "2.0.0"
description = "L9 Governance — rules, skills, commands, and activation automation for Quantum-L9 coding workspaces"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Igor Beylin" }]

# Derived from actual imports in ops/graphiti/*.py and workflows/dags/*.py — not
# aspirational. Re-derive with `grep -rhoE "^(import|from) [a-zA-Z0-9_]+"` before
# adding entries here; do not add packages "for later."
dependencies = [
    "pydantic>=2.0,<3",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "mypy>=1.19",
]

# Repo-root layout (rules/, skills/, commands/, ops/, ...) is not an installable
# package — pyproject.toml exists only to pin the dependency/interpreter contract.
# Without this, `uv sync` tries to build+install "cursor-governance" itself and
# setuptools' auto-discovery fails on the many top-level dirs.
[tool.uv]
package = false
# Floor-pin the resolver itself — a much older/newer `uv` binary can change lock
# resolution behavior even with an identical uv.lock. Bump alongside `uv self update`.
required-version = ">=0.11.23"

[tool.ruff]
line-length = 100
target-version = "py312"
# force-exclude: `exclude` alone only affects directory *discovery* (e.g. `ruff
# check .`). pre-commit invokes ruff with explicit filenames, which bypasses
# plain `exclude` — force-exclude makes the patterns apply to explicitly-passed
# paths too, so _archived reference dirs stay untouched either way.
force-exclude = true
exclude = [
    "**/_archived",
    "**/_archive",
    "**/archive",
    "**/archived",
    "current_work/harvested",
    "C_GOV_FILES",
    "**/.cursor-commands",
    "**/.cursor",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

# python_version pinned to match [project] requires-python — CI's --ignore-missing-imports
# flag is mirrored here so `uv run mypy .` and the CI mypy step behave identically.
[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = [
    "_archived",
    "_archive",
    "archive",
    "archived",
    "current_work/harvested",
    "C_GOV_FILES",
    "\\.cursor-commands",
    "\\.cursor",
]

# No `tests/` convention yet — this repo has 2 test_*.py files total, discovered
# by scanning from root. norecursedirs mirrors [tool.ruff] exclude so archived
# reference code and vendored governance symlinks are never collected.
[tool.pytest.ini_options]
testpaths = ["."]
norecursedirs = [
    "_archived",
    "_archive",
    "archive",
    "archived",
    "current_work",
    "C_GOV_FILES",
    ".cursor-commands",
    ".cursor",
    ".git",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
