[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "l9-graphite-memory"
version = "0.2.0"
description = "Bi-Temporal Knowledge Graph Memory Substrate for Autonomous AI Agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Quantum-L9", email = "dev@quantum-l9.io" },
]
keywords = ["graphiti", "memory", "knowledge-graph", "ai-agents", "temporal-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.24",
    "infisical-python>=2.0",
]

[project.optional-dependencies]
zep = ["zep-python>=2.0"]
server = ["fastapi>=0.100", "uvicorn>=0.20"]
all = ["zep-python>=2.0", "fastapi>=0.100", "uvicorn>=0.20", "infisical-python>=2.0"]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]

[project.scripts]
l9-memory = "l9_graphite_memory.graphiti_memory_client:main"
l9-memory-server = "l9_graphite_memory.server:main"

[project.urls]
Homepage = "https://github.com/Quantum-L9/L9-Graphite-Memory"
Repository = "https://github.com/Quantum-L9/L9-Graphite-Memory"
Issues = "https://github.com/Quantum-L9/L9-Graphite-Memory/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/l9_graphite_memory"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
